--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <form id="weatherForm">
+            <div class="form-group">
+                <label for="location">Enter Location:</label>
+                <input type="text" id="location" name="location" required placeholder="e.g., Buenos Aires">
+            </div>
+            <button type="submit">Get Weather</button>
+        </form>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
