add weather icons

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
         <div id="weatherDisplay" class="weather-display hidden">
             <h2 id="locationName"></h2>
             <div class="weather-info">
+                <div class="weather-icon">
+                    <img id="weatherIcon" src="" alt="Weather icon">
+                </div>
                 <div class="current-temp">
                     <span id="currentTemp"></span>°C
                 </div>
