feat: improve translations with modular API architecture
- Split API into specialized weather and translation modules
- Fetch weather data in English for better translation quality
- Add enhanced description translation with fallback mechanisms
- Fix UI issues with improperly displayed weather conditions
- Improve styling for weather details section

next steps:
- update icons to properly match weather conditions

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>Aplicación del Clima</title>
 </head>
 <body>
     <div class="container">
         <form id="weatherForm">
             <div class="form-group">
-                <label for="location">Enter Location:</label>
-                <input type="text" id="location" name="location" required placeholder="e.g., Buenos Aires">
+                <label for="location">Ingrese una ubicación:</label>
+                <input type="text" id="location" name="location" required placeholder="ej: Buenos Aires">
             </div>
-            <button type="submit">Get Weather</button>
+            <button type="submit">Obtener Clima</button>
         </form>
 
         <div id="weatherDisplay" class="weather-display hidden">
